--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "type": "module"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.17.0",
+    "pino-http": "^10.5.0"
   }
 }
