--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "dev": "nodemon src/index.js",
-    "type": "module"
+    "type": "module",
+    "seed": "node src/scripts/seedContacts.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
